refactor: remove duplication from test
Extract the variable created assertion to a separate method to be reused in the tests